syntax="proto3";

package cart_page;

option go_package="github.com/asmile1559/dyshop/pb/frontend/cart_page;cart_page";

service CartService {
  rpc AddCart(AddCartReq) returns (AddCartResp) {};
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {};
  rpc GetCart(GetCartReq) returns (GetCartResp) {};
  rpc ListCart(ListCartReq) returns (ListCartResp) {};
}

message AddCartReq {
  uint32 product_id = 1;
  int32 quantity = 2;
}

message AddCartResp {

}

message EmptyCartReq {

}

message EmptyCartResp {

}

message GetCartReq {
  string q = 1;
}

message GetCartResp {

}

message ListCartReq {
  
}

message ListCartResp{

}